--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ pandas==2.2.3
 pdfminer.six==20231228
 pdfplumber==0.11.4
 pillow==11.0.0
+plotly==6.0.0
 portalocker==2.10.1
 propcache==0.2.0
 protobuf==5.28.3
